cmake_minimum_required(VERSION 3.10)
project(FlexRayTestDemo)

set(CMAKE_CXX_STANDARD 11)

if(WIN32)
    include_directories("lib/windows")
    link_directories("lib/windows")
else()
    include_directories("lib/linux")
    link_directories("lib/linux")
endif()

add_library(tosunflexray SHARED src/flexraywrapper.cpp ${SRC_FILES})

add_executable(test test.cpp)
add_executable(fTest functionTest.cpp)
add_executable(wTest wrapperTest.cpp)
if(WIN32)
    target_link_libraries(tosunflexray PRIVATE libTSCAN)
    target_link_libraries(test PRIVATE libTSCAN)
    target_link_libraries(fTest PRIVATE libTSCAN)
    target_link_libraries(wTest PRIVATE libTSCAN)
else()
    target_link_libraries(tosunflexray PRIVATE TSCANApiOnLinux TSH dl)
    target_link_libraries(test PRIVATE TSCANApiOnLinux TSH dl)
    target_link_libraries(fTest PRIVATE TSCANApiOnLinux TSH dl)
    target_link_libraries(wTest PRIVATE TSCANApiOnLinux TSH dl)
endif()